Fix trip card alignment aand size on share page

--- a/src/Components/Share/Share.scss
+++ b/src/Components/Share/Share.scss
@@ -1,7 +1,7 @@
 @import '../../sass/variables.scss';
 .share-pg {
   height: 80vh;
-  padding: 7vh 0;
+  padding: 2vh 0;
   display: flex;
   flex-direction: column;
   align-items: center;
