--- a/src/Components/TripCard/TripCard.scss
+++ b/src/Components/TripCard/TripCard.scss
@@ -8,6 +8,7 @@
   display: flex;
   justify-content: center;
   height: 98%;
+  min-height: 25rem;
 
 }
 
